# rusterizer

./: Cargo.toml  README.md  about.toml  imgui.ini
res/: imgui.vert
src/: ecs.rs  engine.rs  gui.rs  main.rs  renderer.rs  triangle.rs  vulkan.rs
