[package]
name = "dowaengine_ash"
version = "0.1.0"
authors = ["DasCapschen <3923406+DasCapschen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
winit = "0.23.0"        # window creation, input
ash = "0.31.0"          # vulkan bindings
ash-window = "0.5.0"    # connects ash to winit
vk-mem = "0.2.2"        # AMD vulkan memory simplification
vk-sync = "0.1.6"       # Vulkan Synchronisation simplification
imgui = "0.6.0"         # immediate mode GUI
imgui-winit-support = "0.6.0" # connects imgui to winit (handles input events etc)
rodio = "0.13.0"        # audio decoding & playback